abuot section 50% ok

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -697,7 +697,9 @@
 
 
 
-            <!--******  contact area  ******-->
+            <!-- ************************************ -->
+            <!--        About Section Start Here          -->
+            <!-- ************************************ -->
             <section class="">
                 <div class="my-container my-pt-0">
                     <div class="">
@@ -705,13 +707,16 @@
                         <p>You can find out a lot of information about us.</p>
                     </div>
 
+                    <div class="my-mt-6 about-us-top my-grid-2 my-gap-10 my-align-center my-grid-md-1">
+                        <div class="max-450">
 
-
-                    <div class="my-mt-6 about-us-top my-grid-2 my-grid-md-1">
-                        <div>
-
-                            <h3></h3>
-                            <p></p>
+                            <h2>Shoppig</h2>
+                            <p class="my-mt-4"> At [Your Company Name], we strive to deliver excellence in every project
+                                we undertake.
+                                Our team is
+                                passionate, innovative, and dedicated to achieving your goals. With years of experience,
+                                we specialize
+                                in creating customized solutions that bring value to our clients.</p>
                         </div>
 
                         <div>
@@ -726,7 +731,154 @@
 
 
 
-            <!--******  Map  ******-->
+
+            <!-- ************************************ -->
+            <!--       Our Achievement  Start Here    -->
+            <!-- ************************************ -->
+            <section class="">
+                <div class="my-container">
+                    <div class="about">
+
+                        <div class="section-head my-text-center">
+                            <h2>Our Achievement</h2>
+                            <p>Explore Achievement </p>
+                        </div>
+
+                        <div class="items my-grid-4 my-grid-md-2 my-gap-6 my-mt-6">
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h4>Total Products</h4>
+                                    <h2 class="my-mt-4 counter" data-target="1040">1040</h2>
+                                </div>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h4>Total Sell</h4>
+                                    <h2 class="my-mt-4 counter" data-target="200">200</h2>
+                                </div>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h4>Total Customer</h4>
+                                    <h2 class="my-mt-4 counter" data-target="500">500</h2>
+                                </div>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h4>Total Sell</h4>
+                                    <h2 class="my-mt-4 counter" data-target="2000">2000</h2>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+
+            <!-- ************************************ -->
+            <!--       Management   Start Here    -->
+            <!-- ************************************ -->
+            <section class="management">
+                <div class="my-container">
+                    <div class="section-head">
+                        <h2 class=" my-text-center ">Company Management </h2>
+                        <p>see our management</p>
+                    </div>
+                </div>
+
+                <div class="my-mt-4 my-d-flex my-justify-start">
+
+                    <!-- single card -->
+                    <div class="my-card">
+                        <div class="card-inner">
+                            <!-- Front Face -->
+                            <div class="card-front">
+                                <div class="bg-image">
+                                    <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
+                                        alt="profile image">
+                                </div>
+                                <div class="content">
+                                    <div class="my-text-center">
+                                        <div class="my-sub-title">MD Tanvir Ahmed</div>
+                                        <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Back Face -->
+                            <div class="card-back">
+                                <div class="content">
+                                    <p class="my-text-gray">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
+                                        eveniet ipsam
+                                        dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
+                                        aperiam
+                                        similique corporis accusantium sapiente accusamus consequatur dicta?
+                                    </p>
+                                    <ul class="social my-flex-center my-gap-4 my-mt-6">
+                                        <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
+                                        <li><a href="#"><i class="ri-twitter-line"></i></a></li>
+                                        <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
+                                        <li><a href="#"><i class="ri-instagram-line"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single card -->
+                    <div class="my-card">
+                        <div class="card-inner">
+                            <!-- Front Face -->
+                            <div class="card-front">
+                                <div class="bg-image">
+                                    <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
+                                        alt="profile image">
+                                </div>
+                                <div class="content">
+                                    <div class="my-text-center">
+                                        <div class="my-sub-title">MD Tanvir Ahmed</div>
+                                        <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Back Face -->
+                            <div class="card-back">
+                                <div class="content">
+                                    <p class="my-text-gray">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
+                                        eveniet ipsam
+                                        dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
+                                        aperiam
+                                        similique corporis accusantium sapiente accusamus consequatur dicta?
+                                    </p>
+                                    <ul class="social my-flex-center my-gap-4 my-mt-6">
+                                        <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
+                                        <li><a href="#"><i class="ri-twitter-line"></i></a></li>
+                                        <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
+                                        <li><a href="#"><i class="ri-instagram-line"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Repeat for other cards -->
+
+                </div>
+                </div>
+            </section>
 
 
         </main>
