--- a/Pages/product.html
+++ b/Pages/product.html
@@ -707,7 +707,7 @@
 
 
             <!-- ************************************ -->
-            <!--         Product Details  Here          -->
+            <!--         Tab Section For Products       -->
             <!-- ************************************ -->
             <section>
                 <div class="my-container">
@@ -988,7 +988,9 @@
 
 
 
-
+            <!-- ************************************ -->
+            <!--         Product Details  Here          -->
+            <!-- ************************************ -->
             <section class="tabs-area">
                 <div class="my-container">
                     <div class="tab-head">
