--- a/Pages/about.html
+++ b/Pages/about.html
@@ -702,12 +702,8 @@
             <!-- ************************************ -->
             <section class="">
                 <div class="my-container my-pt-0">
-                    <div class="">
-                        <h2>About US</h2>
-                        <p>You can find out a lot of information about us.</p>
-                    </div>
 
-                    <div class="my-mt-6 about-us-top my-grid-2 my-gap-10 my-align-center my-grid-md-1">
+                    <div class=" about-us-top my-grid-2 my-gap-10 my-align-center my-grid-md-1">
                         <div class="max-450">
 
                             <h2>Shoppig</h2>
@@ -735,8 +731,8 @@
             <!-- ************************************ -->
             <!--       Our Achievement  Start Here    -->
             <!-- ************************************ -->
-            <section class="">
-                <div class="my-container">
+            <section class="our-achivment">
+                <div class="my-container-sm">
                     <div class="about">
 
                         <div class="section-head my-text-center">
@@ -744,12 +740,12 @@
                             <p>Explore Achievement </p>
                         </div>
 
-                        <div class="items my-grid-4 my-grid-md-2 my-gap-6 my-mt-6">
+                        <div class="items my-grid-4 my-grid-md   my-grid-sm-2  my-gap-6 my-mt-6">
 
                             <!-- single item -->
                             <div class="item">
                                 <div class="my-card my-text-center">
-                                    <h4>Total Products</h4>
+                                    <h4 class="my-text-gray">Total Products</h4>
                                     <h2 class="my-mt-4 counter" data-target="1040">1040</h2>
                                 </div>
                             </div>
@@ -757,7 +753,7 @@
                             <!-- single item -->
                             <div class="item">
                                 <div class="my-card my-text-center">
-                                    <h4>Total Sell</h4>
+                                    <h4 class="my-text-gray">Total Sell</h4>
                                     <h2 class="my-mt-4 counter" data-target="200">200</h2>
                                 </div>
                             </div>
@@ -765,7 +761,7 @@
                             <!-- single item -->
                             <div class="item">
                                 <div class="my-card my-text-center">
-                                    <h4>Total Customer</h4>
+                                    <h4 class="my-text-gray">Total Customer</h4>
                                     <h2 class="my-mt-4 counter" data-target="500">500</h2>
                                 </div>
                             </div>
@@ -773,7 +769,7 @@
                             <!-- single item -->
                             <div class="item">
                                 <div class="my-card my-text-center">
-                                    <h4>Total Sell</h4>
+                                    <h4 class="my-text-gray">Total Sell</h4>
                                     <h2 class="my-mt-4 counter" data-target="2000">2000</h2>
                                 </div>
                             </div>
@@ -789,94 +785,151 @@
             <!-- ************************************ -->
             <!--       Management   Start Here    -->
             <!-- ************************************ -->
-            <section class="management">
-                <div class="my-container">
+            <section class="management my-mt-6">
+                <div class="my-container-sm">
                     <div class="section-head">
                         <h2 class=" my-text-center ">Company Management </h2>
                         <p>see our management</p>
                     </div>
-                </div>
 
-                <div class="my-mt-4 my-d-flex my-justify-start">
+                    <div
+                        class="my-mt-4 my-d-flex my-flex-md-column my-align-start my-gap-6 my-justify-center my-mt-6 management-area">
 
-                    <!-- single card -->
-                    <div class="my-card">
-                        <div class="card-inner">
-                            <!-- Front Face -->
-                            <div class="card-front">
-                                <div class="bg-image">
-                                    <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
-                                        alt="profile image">
+                        <!-- single card -->
+                        <div class="my-card">
+                            <div class="card-inner">
+                                <!-- Front Face -->
+                                <div class="card-front">
+                                    <div class="bg-image">
+                                        <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
+                                            alt="profile image">
+                                    </div>
+                                    <div class="content">
+                                        <div class="my-text-center">
+                                            <div class="my-sub-title">MD Tanvir Ahmed</div>
+                                            <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="content">
-                                    <div class="my-text-center">
-                                        <div class="my-sub-title">MD Tanvir Ahmed</div>
-                                        <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
+
+                                <!-- Back Face -->
+                                <div class="card-back">
+                                    <div class="content">
+                                        <div>
+                                            <h4 class="my-text-center my-text-white">
+                                                Md Tanvir Ahmed
+                                            </h4>
+                                            <h5 class="my-text-border my-mt-3">Ceo</h5>
+                                        </div>
+                                        <p class="my-text-gray my-mt-5">
+                                            Hi i am tanvir sit amet consectetur adipisicing elit. Accusantium
+                                            eveniet ipsam
+                                            dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
+                                            aperiam
+                                            similique corporis accusantium sapiente accusamus consequatur dicta?
+                                        </p>
+                                        <ul class="social my-flex-center my-gap-4 my-mt-6">
+                                            <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
+                                            <li><a href="#"><i class="ri-twitter-line"></i></a></li>
+                                            <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
+                                            <li><a href="#"><i class="ri-instagram-line"></i></a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <!-- single card -->
+                        <div class="my-card">
+                            <div class="card-inner">
+                                <!-- Front Face -->
+                                <div class="card-front">
+                                    <div class="bg-image">
+                                        <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
+                                            alt="profile image">
+                                    </div>
+                                    <div class="content">
+                                        <div class="my-text-center">
+                                            <div class="my-sub-title">MD Tanvir Ahmed</div>
+                                            <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
+                                        </div>
+                                    </div>
+                                </div>
 
-                            <!-- Back Face -->
-                            <div class="card-back">
-                                <div class="content">
-                                    <p class="my-text-gray">
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
-                                        eveniet ipsam
-                                        dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
-                                        aperiam
-                                        similique corporis accusantium sapiente accusamus consequatur dicta?
-                                    </p>
-                                    <ul class="social my-flex-center my-gap-4 my-mt-6">
-                                        <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
-                                        <li><a href="#"><i class="ri-twitter-line"></i></a></li>
-                                        <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
-                                        <li><a href="#"><i class="ri-instagram-line"></i></a></li>
-                                    </ul>
+                                <!-- Back Face -->
+                                <div class="card-back">
+                                    <div class="content">
+                                        <div>
+                                            <h4 class="my-text-center my-text-white">
+                                                Md Tanvir Ahmed
+                                            </h4>
+                                            <h5 class="my-text-border my-mt-3">Ceo</h5>
+                                        </div>
+                                        <p class="my-text-gray my-mt-5">
+                                            Hi i am tanvir sit amet consectetur adipisicing elit. Accusantium
+                                            eveniet ipsam
+                                            dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
+                                            aperiam
+                                            similique corporis accusantium sapiente accusamus consequatur dicta?
+                                        </p>
+                                        <ul class="social my-flex-center my-gap-4 my-mt-6">
+                                            <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
+                                            <li><a href="#"><i class="ri-twitter-line"></i></a></li>
+                                            <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
+                                            <li><a href="#"><i class="ri-instagram-line"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- single card -->
+                        <div class="my-card">
+                            <div class="card-inner">
+                                <!-- Front Face -->
+                                <div class="card-front">
+                                    <div class="bg-image">
+                                        <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
+                                            alt="profile image">
+                                    </div>
+                                    <div class="content">
+                                        <div class="my-text-center">
+                                            <div class="my-sub-title">MD Tanvir Ahmed</div>
+                                            <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Back Face -->
+                                <div class="card-back">
+                                    <div class="content">
+                                        <div>
+                                            <h4 class="my-text-center my-text-white">
+                                                Md Tanvir Ahmed
+                                            </h4>
+                                            <h5 class="my-text-border my-mt-3">Ceo</h5>
+                                        </div>
+                                        <p class="my-text-gray my-mt-5">
+                                            Hi i am tanvir sit amet consectetur adipisicing elit. Accusantium
+                                            eveniet ipsam
+                                            dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
+                                            aperiam
+                                            similique corporis accusantium sapiente accusamus consequatur dicta?
+                                        </p>
+                                        <ul class="social my-flex-center my-gap-4 my-mt-6">
+                                            <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
+                                            <li><a href="#"><i class="ri-twitter-line"></i></a></li>
+                                            <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
+                                            <li><a href="#"><i class="ri-instagram-line"></i></a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- single card -->
-                    <div class="my-card">
-                        <div class="card-inner">
-                            <!-- Front Face -->
-                            <div class="card-front">
-                                <div class="bg-image">
-                                    <img src="https://img.freepik.com/free-photo/portrait-hapy-young-smart-man-glasses-white-wall_231208-12206.jpg"
-                                        alt="profile image">
-                                </div>
-                                <div class="content">
-                                    <div class="my-text-center">
-                                        <div class="my-sub-title">MD Tanvir Ahmed</div>
-                                        <div class="post my-fs-lg my-text-gray my-fw-bold">CEO</div>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <!-- Back Face -->
-                            <div class="card-back">
-                                <div class="content">
-                                    <p class="my-text-gray">
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
-                                        eveniet ipsam
-                                        dicta distinctio ratione vitae id numquam culpa non! Eveniet ab mollitia
-                                        aperiam
-                                        similique corporis accusantium sapiente accusamus consequatur dicta?
-                                    </p>
-                                    <ul class="social my-flex-center my-gap-4 my-mt-6">
-                                        <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
-                                        <li><a href="#"><i class="ri-twitter-line"></i></a></li>
-                                        <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
-                                        <li><a href="#"><i class="ri-instagram-line"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <!-- Repeat for other cards -->
 
-                </div>
                 </div>
             </section>
 
